--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon_alten.ico">
+
+  <!--<script src="../node_modules/sockjs-client/dist/sockjs.js"></script>-->
+  <!--<script src="../node_modules/webstomp-client/dist/webstomp.js"></script>-->
+
 </head>
 <body>
   <app-root>Loading...</app-root>
