--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,9 @@
   <meta charset="utf-8">
   <title>Alten chat</title>
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
   <link rel="icon" type="image/x-icon" href="favicon_alten.ico">
-
-  <!--<script src="../node_modules/sockjs-client/dist/sockjs.js"></script>-->
-  <!--<script src="../node_modules/webstomp-client/dist/webstomp.js"></script>-->
 
 </head>
 <body>
